<resources>
    <string name="app_name">Baby on Board</string>

    <!-- Bottom Menu -->
    <string name="title_bodysigns">Sinais Vitais</string>
    <string name="title_babycrib">Berço</string>
    <string name="title_connection">Conexão</string>

    <!-- Fake data to test view elements -->
    <string name="example_heartbeats">80 bpm</string>
    <string name="example_temperature">30.5 ºC</string>
    <string name="example_breathing">Respirando</string>
    <string name="example_ip">127.0.0.1</string>

    <!-- Images and icons description -->
    <string name="description_ic_heartbeats">Heartbeats icon</string>
    <string name="description_ic_thermometer">Thermometer icon</string>
    <string name="description_ic_breathing">Breathing icon</string>
    <string name="description_ic_vibration_movement">Movimento de vibração</string>
    <string name="description_ic_front_movement">Movimento frontal</string>
    <string name="description_ic_side_movementg">Movimento lateral</string>
    <string name="description_ic_wifi">Conectar ao berço</string>

    <!-- Hints -->
    <string name="ip_address">Identificação do Berço</string>

    <!-- Buttons -->
    <string name="connect">Conectar</string>
    <string name="disconnect">Desconectar</string>
    <string name="start">Iniciar</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">OK</string>

    <!-- Texts -->
    <string name="start_movement">Movimentar Berço</string>
    <string name="duration_time">Selecione o tempo de duração do movimento.</string>

    <!-- External files -->
    <string name="preferences_file">shared_prefs</string>

    <!-- Messages -->
    <string name="empty_ip">Informe o IP do berço.</string>

    <!-- Shared Preferecnes keys -->
    <string name="shared_pref_ip">ip</string>

    <!-- Bundle keys -->
    <string name="bundle_populate_date">populate_data</string>
</resources>
