<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.CardView
        android:id="@+id/camera_wv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="4dp">

        <WebView
            android:id="@+id/wv_streaming"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1">

        <View
            android:id="@+id/view"
            android:layout_width="5dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/iv_heartbeats"
            app:layout_constraintRight_toRightOf="@id/iv_heartbeats"
            app:layout_constraintTop_toBottomOf="parent" />

        <View
            android:layout_width="5dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_heartbeats"
            style="@style/BodyStatusTextView"
            android:layout_width="0dp"
            android:layout_height="65dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_heartbeats"
            app:layout_constraintLeft_toRightOf="@id/view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_heartbeats"
            tools:text="@string/example_heartbeats" />

        <ImageView
            android:id="@+id/iv_heartbeats"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:contentDescription="@string/description_ic_heartbeats"
            app:layout_constraintBottom_toTopOf="@+id/iv_thermometer"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_heartbeats" />


        <TextView
            android:id="@+id/tv_temperature"
            style="@style/BodyStatusTextView"
            android:layout_width="0dp"
            android:layout_height="65dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_thermometer"
            app:layout_constraintLeft_toRightOf="@id/view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_thermometer"
            tools:text="@string/example_temperature" />

        <ImageView
            android:id="@+id/iv_thermometer"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:contentDescription="@string/description_ic_thermometer"
            app:layout_constraintBottom_toTopOf="@+id/iv_breathing"
            app:layout_constraintTop_toBottomOf="@+id/iv_heartbeats"
            app:srcCompat="@drawable/ic_thermometer" />

        <TextView
            android:id="@+id/tv_breathing"
            style="@style/BodyStatusTextView"
            android:layout_width="0dp"
            android:layout_height="65dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_breathing"
            app:layout_constraintLeft_toRightOf="@id/view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_breathing"
            tools:text="@string/example_breathing" />

        <ImageView
            android:id="@+id/iv_breathing"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:contentDescription="@string/description_ic_breathing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_thermometer"
            app:srcCompat="@drawable/ic_breathing" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>